// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Badge correctly should render Badge 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #ee0000;
  color: #ffffff;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge correctly should render Badge with fill color yellow 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #fed60e;
  color: #000000;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge correctly should render Badge with fillcolor as green 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #008331;
  color: #ffffff;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge correctly should render Badge with maxWidth 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #ee0000;
  color: #ffffff;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  max-width: 50px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge correctly should render Badge with surface as dark 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #ee0000;
  color: #ffffff;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge correctly should render Badge with surface as dark and fill color 1`] = `
.c0 {
  display: inline-block;
  text-overflow: ellipsis;
  background-color: #fed60e;
  color: #000000;
  border-radius: 2px;
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  width: auto;
  height: auto;
  min-width: 23px;
  padding: 2px 4px;
  box-sizing: border-box;
}

.c0 > div {
  margin: 0;
}

<div>
  <div
    class="c0"
  >
    <div />
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - container size kind simple 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.5rem;
  min-width: 1.5rem;
  border-radius: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  background-color: #ffffff;
  height: 0.25rem;
  width: 0.25rem;
  border-radius: 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="simple"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - dotSize 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  background-color: #ffffff;
  height: 0.375rem;
  width: 0.375rem;
  border-radius: 0.375rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="simple"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - hideBorder 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background-color: #ffffff;
  height: 0.25rem;
  width: 0.25rem;
  border-radius: 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="simple"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered + if number is not passed as children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        0
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered + if number is not passed as children 2`] = `
<div>
  <div
    class="BadgeIndicatorWrapper-VDS__sc-1kbnyqj-0 fDzIBv"
  >
    <div
      class="StyledBadgeIndicator-VDS__sc-1kbnyqj-1 ccIicx"
      kind="numbered"
    >
      <div
        class="StyledNumber-VDS__sc-1kbnyqj-3 bPsAvi"
        data-testid="numberedDiv"
      >
        0
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered + maximum digit 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99+
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered + maximum digit none 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        10,000
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Black 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Black and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Blue 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #006fc1;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Blue and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #0089ec;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Gray 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #6f7171;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Gray High Contrast and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #a7a7a7;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Gray Low Contrast 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #d8dada;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Gray Low Contrast and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #333333;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Green 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #008331;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Green and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #00b845;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Orange 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #b95319;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Orange and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ff8027;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as White 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as White and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Yellow 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fed60e;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with fillColor as Yellow and Surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fed60e;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #000000;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind numbered with surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind simple 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  background-color: #ffffff;
  height: 0.25rem;
  width: 0.25rem;
  border-radius: 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="simple"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - kind simple with surface as dark 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #000000;
}

.c2 {
  background-color: #ffffff;
  height: 0.25rem;
  width: 0.25rem;
  border-radius: 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="simple"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - leadingCharacter 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        +99+
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - size 2XLarge 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.75rem;
  min-width: 1.75rem;
  border-radius: 1.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eDS;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  color: #ffffff;
  padding: 0.125rem 0.5rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - size XLarge 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.5rem;
  min-width: 1.5rem;
  border-radius: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eDS;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.25rem;
  color: #ffffff;
  padding: 0.125rem 0.375rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - size large 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.25rem;
  min-width: 1.25rem;
  border-radius: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eDS;
  font-size: 1rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 1rem;
  color: #ffffff;
  padding: 0.125rem 0.375rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - size medium 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.125rem;
  min-width: 1.125rem;
  border-radius: 1.125rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eDS;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  line-height: 0.875rem;
  color: #ffffff;
  padding: 0.125rem 0.375rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - size small 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - trailingText 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1rem;
  min-width: 1rem;
  border-radius: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.125rem 0.25rem;
}

.c3 {
  white-space: nowrap;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99+
        <span
          class="c3"
          data-testid="trailingText"
        >
           new
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Badge indicator correctly should render Badge indicator - with custom padding 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ee0000;
  height: 1.25rem;
  min-width: 1.25rem;
  border-radius: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 0 0 0.0625rem #ffffff;
}

.c2 {
  font-family: Verizon-NHG-eTX;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 0.75rem;
  color: #ffffff;
  padding: 0.25rem 0.5rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      kind="numbered"
    >
      <div
        class="c2"
        data-testid="numberedDiv"
      >
        99
        
      </div>
    </div>
  </div>
</div>
`;
